//1. protoc --gofast_out=. -I=".:${GOPATH}/src/github.com/gogo/protobuf:${GOPATH}/src/github.com/gogo/protobuf/protobuf:${GOPATH}/src/github.com/flike/kingbus" *.proto
//2.delete line "import _ "gogoproto" in record.pb.go

syntax = "proto2";
package storagepb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = true;

message Record {
    optional uint32 crc  = 1 [(gogoproto.nullable) = false];
    optional bytes data  = 2;
}

enum FlavorType {
    MySQL     = 0;
    Maria = 1;
}

message BinlogEvent {
    optional uint32 type = 1 [(gogoproto.nullable) = false];
    optional FlavorType flavor  = 2 [(gogoproto.nullable) = false];
    optional uint32 divided_count = 3 [(gogoproto.nullable) = false];
    optional uint32 divided_seq_num  = 4 [(gogoproto.nullable) = false];
    optional bytes data  = 5;
}
